--- a/CoinViewTiki/Views/CoinListPage.xaml
+++ b/CoinViewTiki/Views/CoinListPage.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:CoinViewTiki.Behaviors"
-            Title="CoinViewTiki App"
+             Visual="Material"
              xmlns:prism="http://prismlibrary.com"
              xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              x:Class="CoinViewTiki.CoinListPage">
@@ -54,11 +54,16 @@
                          </ViewCell>
                      </DataTemplate>
                  </ListView.GroupHeaderTemplate>
-         
                  <ListView.ItemTemplate>
                      <DataTemplate>
-                         <TextCell Text="{Binding Name}"></TextCell>
+                         <ViewCell>
+                             <Frame HasShadow="True">
+                                 <Label Text="{Binding Name}"
+                                        Style="{StaticResource listNameStyle}"/>
+                             </Frame>
+                         </ViewCell>
                      </DataTemplate>
+                 
                  </ListView.ItemTemplate>
          
              </ListView>
